Add User and Role entities with relationships for role management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=springpass
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Disable Open-In-View for better performance in REST APIs
+spring.jpa.open-in-view=false
+
+# Disable Thymeleaf template location check (REST API doesn't need templates)
+spring.thymeleaf.check-template-location=false
