Add JWT authentication support with configuration and utility methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.open-in-view=false
 
 # Disable Thymeleaf template location check (REST API doesn't need templates)
 spring.thymeleaf.check-template-location=false
+
+# JWT Configuration
+jwt.secret=EKYzN2FiOTItZDI3YS00YzI4LTkzMjAtY2EwM2JlNjBiYjA0
+jwt.expiration=3600000 // 1 hour in milliseconds
