Refactor authentication process to return JWT token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,6 @@ spring.jpa.open-in-view=false
 spring.thymeleaf.check-template-location=false
 
 # JWT Configuration
-jwt.secret=EKYzN2FiOTItZDI3YS00YzI4LTkzMjAtY2EwM2JlNjBiYjA0
-jwt.expiration=3600000 // 1 hour in milliseconds
+app.jwt.secret=EKYzN2FiOTItZDI3YS00YzI4LTkzMjAtY2EwM2JlNjBiYjA0
+# 1 hour in milliseconds
+app.jwt.expiration=3600000
